# pan26-radar

./: Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: Pan-Task-Generative-AI-Detection-2026.md
notebooks/: datasets_preparation.ipynb  preprocessing.ipynb  radar_encoder_freeze.ipynb  radar_encoder_freeze_pan26.ipynb  radar_encoder_freeze_raid.ipynb  radar_end_to_end.ipynb  radar_modernbert_large_encoder_freeze_training.ipynb  radar_modernbert_large_encoder_training.ipynb  radar_modernbert_large_encoder_unfreeze_training.ipynb  radar_modernbert_large_freeze_pan26_training.ipynb  radar_modernbert_large_freeze_raid_training.ipynb
pan26_genai_baselines/: Dockerfile  README.md  build-docker.sh  pyproject.toml
pan26_genai_baselines/pan25_genai_baselines/: __init__.py  binoculars.py  cli.py  detector_base.py  ppmd.py  tfidf.py  util.py
pan26_genai_evaluator/: Dockerfile  README.md  build-docker.sh  pyproject.toml
pan26_genai_evaluator/pan26_genai_evaluator/: evaluator.py
radar/: predict.py
radar/features/: __init__.py  stylometric_extractor.py
radar/modeling/: __init__.py  configuration_radar.py  modeling_radar.py
